--- a/src/test/modules/test_extensions/Makefile
+++ b/src/test/modules/test_extensions/Makefile
@@ -6,7 +6,8 @@ PGFILEDESC = "test_extensions - regression testing for EXTENSION support"
 EXTENSION = test_ext_cor test_ext_cau
 DATA = test_ext_cor--1.0.sql \
        test_ext_cau--1.0--1.1.sql test_ext_cau--1.0.sql \
-       test_ext_cau--1.1.sql test_ext_cau--unpackaged--1.0.sql
+       test_ext_cau--1.1.sql test_ext_cau--unpackaged--1.0.sql \
+       test_ext_cau--1.1--1.2.sql
 
 REGRESS = test_extensions
 
