Use static linking in configure.in

--- a/configure.in
+++ b/configure.in
@@ -1402,7 +1402,10 @@ Use --without-zlib to disable zlib support.])])
 fi
 
 if test "$with_zstd" = yes; then
-  AC_CHECK_LIB(zstd, ZSTD_compressCCtx, [],
+  AC_CHECK_LIB(zstd, ZSTD_compressCCtx, [
+	LIBS="-l:libzstd.a $LIBS"
+	AC_DEFINE([HAVE_LIBZSTD], [1], ["Define that zstd exists"])
+  ],
                [AC_MSG_ERROR([zstd library not found
 If you have libzstd already installed, see config.log for details on the
 failure.  It is possible the compiler isn't looking in the proper directory.
