Unit, regress and isolation tests

--- a/src/backend/catalog/test/Makefile
+++ b/src/backend/catalog/test/Makefile
@@ -4,9 +4,9 @@ subdir = src/backend/catalog
 
 include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/src/Makefile.mock
+include $(top_srcdir)/src/backend/mock.mk
 
-
-TARGETS += storage_tablespace
+TARGETS += storage_tablespace storage_pending
 
 
 storage_tablespace.t: $(top_srcdir)/src/backend/catalog/storage_tablespace.o
@@ -16,5 +16,11 @@ storage_tablespace.t: $(top_srcdir)/src/backend/catalog/storage_tablespace.o
 		storage_tablespace_test.c \
 		-o storage_tablespace_test.o && ./storage_tablespace_test.o
 
+storage_pending.t: \
+	$(MOCK_DIR)/backend/utils/mmgr/dsa_mock.o \
+	$(MOCK_DIR)/backend/storage/lmgr/lwlock_mock.o \
+	$(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
+	$(MOCK_DIR)/backend/access/hash/hash_mock.o
 
-check: storage_tablespace.t
+check: storage_tablespace.t storage_pending.t
+	./storage_pending.t
