--- a/src/test/regress/GNUmakefile
+++ b/src/test/regress/GNUmakefile
@@ -183,7 +183,9 @@ tablespace-setup:
 	./testtablespace_mytempsp3 \
 	./testtablespace_mytempsp4 \
 	./testtablespace_space_12871 \
-	./testtablespace_database_tablespace
+	./testtablespace_database_tablespace \
+	./testtablespace_temp_tables \
+	./testtablespace_temp_files
 
 .PHONY: hooktest
 hooktest:
